[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/menu/volume_settings.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/menu.tres" type="TileSet" id=2]
[ext_resource path="res://ui_elements/Menu/Buttons/close.png" type="Texture" id=3]
[ext_resource path="res://ui_elements/Menu/Buttons/Play.png" type="Texture" id=4]
[ext_resource path="res://scenes/menu/retry.gd" type="Script" id=5]
[ext_resource path="res://scenes/menu/pause_menu_theme.tres" type="Theme" id=6]
[ext_resource path="res://ui_elements/Menu/Buttons/Restart.png" type="Texture" id=7]

[node name="retry" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="pause_menu" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backgound" type="ColorRect" parent="pause_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.388235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="pause_menu"]
visible = false
position = Vector2( 416, 376.5 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="pause_menu"]
position = Vector2( 415.75, 436.5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="pause_menu"]
position = Vector2( 415.75, 497.5 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )

[node name="text" type="Node2D" parent="pause_menu"]
position = Vector2( 0, 8 )
scale = Vector2( 2, 2 )

[node name="TileMap" type="TileMap" parent="pause_menu/text"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 10, 10 )
format = 1
tile_data = PoolIntArray( 1376278, 0, 16, 1376280, 0, 20, 1376282, 0, 8, 1376284, 0, 19, 1572886, 0, 17, 1572887, 0, 4, 1572888, 0, 18, 1572889, 0, 19, 1572890, 0, 0, 1572891, 0, 17, 1572892, 0, 19 )

[node name="TileMap2" type="TileMap" parent="pause_menu/text"]
scale = Vector2( 1.5, 1.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 10, 10 )
format = 1
tile_data = PoolIntArray( 524299, 0, 14, 524300, 0, 20, 524301, 0, 19, 524307, 0, 14, 524309, 0, 5, 720910, 0, 1, 720911, 0, 0, 720912, 0, 11, 720913, 0, 11, 720914, 0, 18 )

[node name="CenterContainer" type="CenterContainer" parent="pause_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/CenterContainer"]
margin_left = 440.0
margin_top = 257.0
margin_right = 584.0
margin_bottom = 511.0
custom_constants/separation = 37

[node name="Label" type="Label" parent="pause_menu/CenterContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
align = 1

[node name="Label2" type="Label" parent="pause_menu/CenterContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 144.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 9 )
align = 1

[node name="Button" type="Button" parent="pause_menu/CenterContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 144.0
margin_bottom = 134.0
disabled = true
text = "                      "
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="pause_menu/CenterContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 144.0
margin_bottom = 194.0
disabled = true
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="pause_menu/CenterContainer/VBoxContainer"]
margin_top = 231.0
margin_right = 144.0
margin_bottom = 254.0
disabled = true
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="pause_menu"]

[connection signal="pressed" from="pause_menu/CenterContainer/VBoxContainer/Button2" to="pause_menu" method="_on_Button2_pressed"]
[connection signal="pressed" from="pause_menu/CenterContainer/VBoxContainer/Button3" to="pause_menu" method="_on_Button3_pressed"]
