[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/menu/pause_menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui_elements/Wood and Paper UI/Sprites/Life Bars/Big Bars/3.png" type="Texture" id=2]
[ext_resource path="res://ui_elements/Wood and Paper UI/Sprites/Life Bars/Big Bars/4.png" type="Texture" id=3]
[ext_resource path="res://scenes/menu/volume_settings.gd" type="Script" id=4]
[ext_resource path="res://ui_elements/Wood and Paper UI/Sprites/Life Bars/Big Bars/2.png" type="Texture" id=5]
[ext_resource path="res://ui_elements/Menu/Buttons/Volume.png" type="Texture" id=6]
[ext_resource path="res://scenes/menu/volume.tres" type="Theme" id=7]
[ext_resource path="res://scenes/menu/back_button_theme.tres" type="Theme" id=8]

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backgound" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.388235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]

[node name="3" type="Sprite" parent="."]
position = Vector2( 518, 388 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="4" type="Sprite" parent="."]
position = Vector2( 559, 388 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="2" type="Sprite" parent="."]
position = Vector2( 423, 388 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 390, 385 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 422.0
margin_top = 376.0
margin_right = 602.0
margin_bottom = 392.0
rect_min_size = Vector2( 180, 0 )
custom_constants/separation = 37

[node name="HSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 16.0
theme = ExtResource( 7 )
min_value = -30.0
max_value = 0.0

[node name="Button" type="Button" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 72.0
margin_bottom = 64.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="CenterContainer/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
